--- a/src/Nucs.UnitTests/Nucs.UnitTests.csproj
+++ b/src/Nucs.UnitTests/Nucs.UnitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="..\Properties\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="SampleTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
