--- a/src/Nucs.Console/Nucs.Console.csproj
+++ b/src/Nucs.Console/Nucs.Console.csproj
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nucs.App, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\vsdebug\Nucs.App.dll</HintPath>
+    </Reference>
     <Reference Include="Nucs.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\vsdebug\Nucs.Core.dll</HintPath>
