wip on initial flow

--- a/src/Nucs.Console/App.config
+++ b/src/Nucs.Console/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="nucs-config-dir" value="Q:\ajsdata\_trash\nucs.web.config"/>
+    <add key="nucs-temp-dir" value="q:\ajsdata\_trash\nucs.temp"/>
   </appSettings>
 </configuration>
