--- a/src/Nucs.App/Nucs.App.csproj
+++ b/src/Nucs.App/Nucs.App.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Controllers\Css\CssController.cs" />
     <Compile Include="Controllers\Index\IndexController.cs" />
     <Compile Include="Controllers\Js\JsController.cs" />
+    <Compile Include="Controllers\PlanController.cs" />
     <Compile Include="Dependency\DependencyResolver.cs" />
     <Compile Include="Dependency\Modules\CssControllerModule.cs" />
     <Compile Include="Dependency\Modules\IndexControllerModule.cs" />
