--- a/src/Nucs.Console/App.config
+++ b/src/Nucs.Console/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="nucs-config-dir" value="Q:\ajsdata\_trash\nucs.web.config"/>
+    <add key="nucs-config-dir" value="q:\ajsdata\_trash\nucs.web.config"/>
     <add key="nucs-temp-dir" value="q:\ajsdata\_trash\nucs.temp"/>
+    <add key="nucs-asset-dir" value="q:\ajsdata\repos\Nucs\src\Nucs.App"/>
   </appSettings>
 </configuration>
