--- a/src/Nucs.Core/Nucs.Core.csproj
+++ b/src/Nucs.Core/Nucs.Core.csproj
@@ -39,6 +39,7 @@
     <Compile Include="..\Properties\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Model\External\PlanDetail.cs" />
     <Compile Include="Model\Plan.cs" />
   </ItemGroup>
   <ItemGroup>
