--- a/src/Nucs.UnitTests/Nucs.UnitTests.csproj
+++ b/src/Nucs.UnitTests/Nucs.UnitTests.csproj
@@ -94,9 +94,10 @@
     <Compile Include="App\Controllers\Js\JsControllerTest.cs" />
     <Compile Include="App\Controllers\PlanControllerTest.cs" />
     <Compile Include="App\Dependency\DependencyResolverTest.cs" />
+    <Compile Include="Core\Mapping\PlanMapperTest.cs" />
     <Compile Include="Core\Model\External\PlanTest.cs" />
     <Compile Include="Core\Model\Internal\PlanSpecTest.cs" />
-    <Compile Include="Core\Storage\PlanDetailRepositoryTest.cs" />
+    <Compile Include="Core\Storage\PlanSpecRepositoryTest.cs" />
     <Compile Include="NucsBaseTestCase.cs" />
     <Compile Include="Serialization\SerializerTest.cs" />
   </ItemGroup>
