--- a/src/Nucs.App/Nucs.App.csproj
+++ b/src/Nucs.App/Nucs.App.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Dependency\Modules\IndexControllerModule.cs" />
     <Compile Include="Dependency\Modules\AbstractionsModule.cs" />
     <Compile Include="Dependency\Modules\JsControllerModule.cs" />
+    <Compile Include="Dependency\Modules\MappingModule.cs" />
     <Compile Include="Dependency\Modules\ModuleConfiguration.cs" />
     <Compile Include="Dependency\Modules\PlanControllerModule.cs" />
     <Compile Include="Dependency\Modules\RepositoryModule.cs" />
