--- a/src/Nucs.UnitTests/Nucs.UnitTests.csproj
+++ b/src/Nucs.UnitTests/Nucs.UnitTests.csproj
@@ -100,7 +100,7 @@
     <Compile Include="App\Controllers\PlanControllerTest.cs" />
     <Compile Include="App\Dependency\DependencyResolverTest.cs" />
     <Compile Include="Core\Mapping\MapperConfigurationTest.cs" />
-    <Compile Include="Core\Model\External\PlanTest.cs" />
+    <Compile Include="Core\Model\External\PlanDtoTest.cs" />
     <Compile Include="Core\Model\Internal\PlanSpecTest.cs" />
     <Compile Include="Core\Storage\PlanSpecRepositoryTest.cs" />
     <Compile Include="NucsBaseTestCase.cs" />
