--- a/src/Nucs.UnitTests/Nucs.UnitTests.csproj
+++ b/src/Nucs.UnitTests/Nucs.UnitTests.csproj
@@ -101,7 +101,7 @@
     <Compile Include="App\Dependency\DependencyResolverTest.cs" />
     <Compile Include="Core\Mapping\MapperConfigurationTest.cs" />
     <Compile Include="Core\Model\External\PlanDtoTest.cs" />
-    <Compile Include="Core\Model\Internal\PlanSpecTest.cs" />
+    <Compile Include="Core\Model\Internal\PlanTest.cs" />
     <Compile Include="Core\Storage\PlanSpecRepositoryTest.cs" />
     <Compile Include="NucsBaseTestCase.cs" />
     <Compile Include="Serialization\SerializerTest.cs" />
