--- a/src/Nucs.Core/Nucs.Core.csproj
+++ b/src/Nucs.Core/Nucs.Core.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Mapping\MapperConfiguration.cs" />
     <Compile Include="Mapping\ObjectMapper.cs" />
     <Compile Include="Model\External\PlanDto.cs" />
+    <Compile Include="Model\Internal\Event.cs" />
+    <Compile Include="Model\Internal\EventQueue.cs" />
     <Compile Include="Model\Internal\Plan.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Serialization\JsonSerializer.cs" />
